# Assignment1

./: .gitignore  CMakeLists.txt  GroupList.txt  README.md  board_generator.c  board_generator.h  boggle.c  dictionary.c  dictionary.h  makefile  scoreboard.c  scoreboard.h  word_checker.c  word_checker.h
include/: board_generator.h  dictionary.h  wordChecker.h  word_checker.h
src/: boardGenerator.c  board_generator.c  boggle.c  dictionary.c  scoreboard.c  test.c  unitTest.c  wordChecker.c  word_checker.c
